--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 <td align=center> 
                <iframe width=650 height=420 name="obszar_glowny" src="glowny_twoje_nazwisko.html" border="0"></iframe> 
                                                       <b>obszar główny</b> 
+<iframe src="https://example.com" width="600" height="400" scrolling="no"></iframe>
+
   </td>
             </td> 
         </tr> 
