--- a/index.html
+++ b/index.html
@@ -1,31 +1,56 @@
-<html> 
-  <head> 
-    <meta charset="utf-8"> 
-  </head> 
-<body> 
-    <table width=65% border="1" align="center"> 
-        <tr> 
-            <td colspan="3"> 
-               <b>nagłówek</b>, 3-kolumny scalone  
-            </td> 
-        </tr> 
-        <tr> 
-            <td width=18% align="center"> 
-                  <b>lewe menu</b> 
-            </td> 
-          <td align=center> 
-               <iframe width=650 height=420 name="obszar_glowny" src="glowny_twoje_nazwisko.html" border="0"></iframe> 
-            </td> 
-            <td width=18% align="center"> 
-                 <b>prawe menu</b> 
-            </td> 
-        </tr> 
-        <tr> 
-            <td colspan="3"> 
-                <b>stopka</b>, 3-kolumny scalone
-  </td>
-            </td> 
-        </tr> 
-    </table> 
-</body> 
+<html>
+ <head>
+ <meta charset="utf-8">
+ </head>
+<body>
+ <table width=65% border="1" align="center">
+ <tr>
+ <td colspan="3">
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp<iframe scrolling="no"  width=900 height=115 name="obszar_logo"  src="logo_wasilewska.html" border="0"></iframe>
+ </tr>
+ <tr>
+ <td width=18% align="center">
+ <b>Lewe Menu:</b>
+<ul>
+ <li>
+ <a href="https://zse.edu.gdansk.pl/" target="obszar_glowny">Strona ZSE</a>
+ </li>
+ <li>
+<a href="https://www.kuratorium.gda.pl/" target="obszar_glowny">Kuratorium</a>
+ </li>
+<li>
+<a href="https://pl.wikipedia.org/wiki/HTML" target="obszar_glowny">Wikipedia</a>
+</li>
+<li>
+<a href="https://www.google.com/maps/embed?pb=MAP_ID" target="obszar_glowny">Google Maps</a>
+</li>
+ </ul>
+</td>
+ <td align=center>
+ <iframe  width=700 height=550 name="obszar_glowny" src="glowny_wasilewska.html" border="0"></iframe>
+ </td>
+ <td width=18% align="center">
+ <b>prawe menu</b>
+<br>
+<map id="mapa_wasilewska">
+ <area shape="rect" coords="25,27,144,83" href="plik.zip">
+ <area shape="poly" coords="81,102,27,192,134,192" href="tabela.html" target="obszar_glowny" alt="Trójkąt"> 
+ <area shape="circle" coords="77,262,41,41" href="formualrzindex.html" target="obszar_glowny" alt="Żółte koło">
+ <area shape="circle" coords="77,367,41,41" href="mailto:kasia.wasilewska@gmail.com" alt="Bronzowe koło">
+ <area shape="rect" coords="20,445,138,501" href="z1_z6_wasilewska.html" target="obszar_glowny" alt="Czerwony prostokąt">
+</map>
+ <img src="mapa_wasilewska.png" alt="tutaj wybieraj linki" usemap="#mapa_wasilewska" style="width: 80%; height: 535;"> 
+
+ </td>
+ </tr>
+ <tr>
+ <td colspan="3">
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <iframe scrolling="no" width=900 height=100 name="obszar_stopka" src="stopka_wasilewska.html" border="0"></iframe>
+ </td>
+ </tr>
+ </table>
+<td align=center>
+ 
+ </td>
+</body>
 </html>
