--- a/stopka_wasilewska.html
+++ b/stopka_wasilewska.html
@@ -1,12 +1,36 @@
-<html>
- <head>
- <meta charset="utf-8">
- </head>
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Darmowy Licznik</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 20px;
+    }
+    h1, h2 {
+      margin: 0;
+    }
+    .image-rotator {
+      margin: 20px 0;
+    }
+  </style>
+</head>
 <body>
-<!-- www.DarmowyLicznik.pl -->
-<div class="image-rotator"><div class="rotator-slide" id="rotator-slide-1"><a href="https://www.darmowylicznik.pl/" title="Przejdź na stronę licznika" target="_blank"><img src="https://www.darmowylicznik.pl/licznik.php?id=148092" alt="Darmowy licznik odwiedzin" style="border:0px;" /></a></div></div>
-<!-- END www.DarmowyLicznik.pl -->
-<h1 align="center"> STOPKA-Wasilewska </h1>
-<h2 align="center"> Gdańsk, 20.01.2025 </h2>
+  <!-- www.DarmowyLicznik.pl -->
+  <div class="image-rotator">
+    <div class="rotator-slide" id="rotator-slide-1">
+      <a href="https://www.darmowylicznik.pl/" title="Przejdź na stronę licznika" target="_blank">
+        <img src="https://www.darmowylicznik.pl/licznik.php?id=148092" alt="Darmowy licznik odwiedzin" style="border:0px; max-width: 100%; height: auto;">
+      </a>
+    </div>
+  </div>
+  <!-- END www.DarmowyLicznik.pl -->
+
+  <h1>STOPKA-Wasilewska</h1>
+  <h2>Gdańsk, 20.01.2025</h2>
 </body>
 </html>
+
