--- a/stopka_wasilewska.html
+++ b/stopka_wasilewska.html
@@ -19,18 +19,19 @@
   </style>
 </head>
 <body>
-  <!-- www.DarmowyLicznik.pl -->
+  <!-- Licznik odwiedzin -->
   <div class="image-rotator">
     <div class="rotator-slide" id="rotator-slide-1">
       <a href="https://www.darmowylicznik.pl/" title="Przejdź na stronę licznika" target="_blank">
-        <img src="https://www.darmowylicznik.pl/licznik.php?id=148092" alt="Darmowy licznik odwiedzin" style="border:0px; max-width: 100%; height: auto;">
+        <img src="https://www.darmowylicznik.pl/licznik.php?id=148095" alt="Darmowy licznik odwiedzin" style="border:0px; max-width: 100%; height: auto;">
       </a>
     </div>
   </div>
-  <!-- END www.DarmowyLicznik.pl -->
+  <!-- Koniec licznika odwiedzin -->
 
   <h1>STOPKA-Wasilewska</h1>
   <h2>Gdańsk, 20.01.2025</h2>
 </body>
 </html>
+
 
