--- a/logo_wasilewska.html
+++ b/logo_wasilewska.html
@@ -3,7 +3,7 @@
  <meta charset="utf-8">
  </head>
 <body>
-<h1 align="center"> LOGO-Wasilewska </h1>
+<img src="logo.png" border=1 align=left> 
 <h2 align="center"> Gdańsk, 20.01.2025 </h2>
 </body>
 </html>
