--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
  <b>Lewe Menu:</b>
 <ul>
  <li>
-<a href="https://zse.edu.gdansk.pl/">Strona ZSE</a>
+<a href="https://zse.edu.gdansk.pl/" target="obszar_glowny">Strona ZSE</a>
  </li>
  <li>
 <a href="https://www.kuratorium.gda.pl/" target="obszar_glowny">Kuratorium</a>
