--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
  <b>prawe menu</b>
        <br>
        <map id="mapa_wasilewska">
- <area shape="rect" coords="25,27,144,83" href="mapa_wasilewska.png" download="mapa_wasilewska.png">
+ <area shape="rect" coords="25,27,144,83" href="Plik.zip">
  <area shape="poly" coords="81,102,27,192,134,192" href="tabela.html" target="obszar_glowny" alt="Trójkąt"> 
  <area shape="circle" coords="77,262,41,41" href="formualrzindex.html" target="obszar_glowny" alt="Żółte koło">
  <area shape="circle" coords="77,367,41,41" href="mailto:kasia.wasilewska@gmail.com" alt="Bronzowe koło">
