--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
  <area shape="circle" coords="77,367,41,41" href="mailto:kasia.wasilewska@gmail.com" alt="Bronzowe koło">
  <area shape="rect" coords="20,445,138,501" href="z1_z6_wasilewska.html" target="obszar_glowny" alt="Czerwony prostokąt">
       </map>
- <img src="mapa_wasilewska.png" alt="tutaj wybieraj linki" usemap="#mapa_wasilewska" style="width: 80%; height: 535;"> 
+ <img src="mapa_wasilewska.png" alt="tutaj wybieraj linki" usemap="#mapa_wasilewska"> 
       </td>
       </tr>
       <tr>
