--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
  <b>prawe menu</b>
        <br>
        <map id="mapa_wasilewska">
- <area shape="rect" coords="25,27,144,83" href="Plik.zip">
- <area shape="poly" coords="81,102,27,192,134,192" href="tabela.html" target="obszar_glowny" alt="Trójkąt"> 
- <area shape="circle" coords="77,262,41,41" href="formualrzindex.html" target="obszar_glowny" alt="Żółte koło">
- <area shape="circle" coords="77,367,41,41" href="mailto:kasia.wasilewska@gmail.com" alt="Bronzowe koło">
- <area shape="rect" coords="20,445,138,501" href="z1_z6_wasilewska.html" target="obszar_glowny" alt="Czerwony prostokąt">
+ <area shape="rect" coords="15,15,82,46" href="Plik.zip">
+ <area shape="poly" coords="47,57,,17,106,77,107" href="tabela.html" target="obszar_glowny" alt="Trójkąt"> 
+ <area shape="circle" coords="47,125,147" href="formualrzindex.html" target="obszar_glowny" alt="Żółte koło">
+ <area shape="circle" coords="43,183,205" href="mailto:kasia.wasilewska@gmail.com" alt="Bronzowe koło">
+ <area shape="rect" coords="13,250,80,280" href="z1_z6_wasilewska.html" target="obszar_glowny" alt="Czerwony prostokąt">
       </map>
  <img src="mapa_wasilewska.png" alt="tutaj wybieraj linki" usemap="#mapa_wasilewska"> 
       </td>
