--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
  <area shape="circle" coords="43,183,205" href="mailto:kasia.wasilewska@gmail.com" alt="Bronzowe koło">
  <area shape="rect" coords="13,250,80,280" href="z1_z6_wasilewska.html" target="obszar_glowny" alt="Czerwony prostokąt">
       </map>
- <img src="mapa_wasilewska.gif" alt="tutaj wybieraj linki" usemap="#mapa_wasilewska.gif"> 
+ <img src="mapa_wasilewska.gif" alt="tutaj wybieraj linki" usemap="#mapa_wasilewska"> 
       </td>
       </tr>
       <tr>
