--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
  <b>prawe menu</b>
        <br>
        <map id="mapawasilewska.gif">
- <area shape="rect" coords="7,12,74,41" href="Plik.zip">
- <area shape="poly" coords="47,57,,17,106,77,107" href="tabela.html" target="obszar_glowny" alt="Trójkąt"> 
- <area shape="circle" coords="47,125,147" href="formualrzindex.html" target="obszar_glowny" alt="Żółte koło">
- <area shape="circle" coords="43,183,205" href="mailto:kasia.wasilewska@gmail.com" alt="Bronzowe koło">
- <area shape="rect" coords="13,250,80,280" href="z1_z6_wasilewska.html" target="obszar_glowny" alt="Czerwony prostokąt">
+ <area shape="rect" coords="15,16,82,46" href="Plik.zip">
+ <area shape="poly" coords="47,57,17,107,77,107" href="tabela.html" target="obszar_glowny" alt="Trójkąt"> 
+ <area shape="circle" coords="44,125,146" href="formualrzindex.html" target="obszar_glowny" alt="Żółte koło">
+ <area shape="circle" coords="43,183,204" href="mailto:kasia.wasilewska@gmail.com" alt="Bronzowe koło">
+ <area shape="rect" coords="11,249,80,280" href="z1_z6_wasilewska.html" target="obszar_glowny" alt="Czerwony prostokąt">
       </map>
  <img src="mapawasilewska.gif" alt="tutaj wybieraj linki" usemap="#mapawasilewska.gif"> 
       </td>
